--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 FRONTEND_URL=http://localhost:5173
 PORT=3000
 MONGODB_URI="mongodb://127.0.0.1:27017/binkeyit"
+RESEND_API=re_gPHEkLwF_8MTEb17pYKFRBESHzY99myP2
