--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
-node_modules
-package-lock.json
-package.json
-.env
+# Node modules  
+node_modules/  
+
+# Dependency files  
+package-lock.json  
+package.json  
+
+# Environment variables  
+.env  
+
+# Logs  
+logs  
+*.log  
+npm-debug.log*  
+yarn-debug.log*  
+yarn-error.log*  
+
+# OS-specific files  
+.DS_Store  
+Thumbs.db  
+
+# Build artifacts  
+dist/  
+build/  
+
+# Editor-specific files  
+.vscode/  
+.idea/  
+*.swp  
