--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-FRONTEND_URL=http://localhost:5173
-PORT=3000
+# FRONTEND_URL=http://localhost:5173
+# PORT=3000
 MONGODB_URI="mongodb+srv://igupta99200178:Ishita%4009@binkeyit.xdu5p.mongodb.net/"
 # MONGODB_URI="mongodb://127.0.0.1:27017/binkeyit"
 RESEND_API=re_gPHEkLwF_8MTEb17pYKFRBESHzY99myP2
