fixes-ui-issues

--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
     },
     "dependencies": {
         "bcryptjs": "latest",
+        "body-parser": "^1.20.3",
         "cloudinary": "^2.5.1",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
-        "dotenv": "latest",
+        "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "latest",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
+        "nodemailer": "^6.10.0",
         "resend": "^4.1.2",
         "stripe": "^17.7.0"
     },
     "devDependencies": {
         "nodemon": "latest"
-    }
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
